Implementating Probability Generator

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -3,7 +3,7 @@
 }
 
 .Main-header {
-    background-color: #2c72ff;
+    background-color: #9cbcfd;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
