아직 구현 중

--- a/src/components/Rightbar/Rightbar.css
+++ b/src/components/Rightbar/Rightbar.css
@@ -1,5 +1,5 @@
-.Sidebar {
-    background-color: #002a7e;
+.Rightbar {
+    background-color: #37a24b;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
